--- a/finance/src/main/resources/application.yaml
+++ b/finance/src/main/resources/application.yaml
@@ -1,3 +1,19 @@
 spring:
   application:
     name: drivaltech-finance-api
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
